# fractal-explorer

./: .gitignore  LICENSE  fractal_explorer.py  fractals.py  mandelbrot.py  readme.md  setup.cfg  zooms.py
src/fractal-explorer/: fractal_explorer.py  fractals.py
src/fractal_explorer_quevivasbien.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
