[metadata]
name = fractal-explorer-quevivasbien
version = 0.0.1
author = Mckay Jensen
author_email = jensenm@uchicago.edu
description = Simple GUI for exploring the Mandelbrot set
long_description = file: readme.md
long_description_content_type = text/markdown
url = https://github.com/quevivasbien/fractal-explorer
project_urls =
    Bug Tracker = https://github.com/quevivasbien/fractal-explorer/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src 
